test/libsolidity/syntaxTests/contractBaseLocation/at_before_layout.sol
contract C at layout 0x1234ABC { }
// ----
// ParserError 2314: (11-13): Expected '{' but got identifier
